workspace = { members = ["yew-tincture-test"] }

[package]
name = "yew-tincture"
description = "components for yew web framework"
repository = "https://github.com/astraw/yew-tincture"
version = "0.2.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["web-programming", "wasm", "gui"]

[dependencies]
yew = "0.21"
uuid = { version = "1.7.0", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
