[package]
name = "yew-tincture-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-tincture = { path = ".." }

web-sys = { version = "0.3.69", features = [
    "Element",
    "HtmlInputElement",
    "Window",
] }
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
log = "0.4.21"
gloo-timers = "0.3.0"
